--- a/style1.css
+++ b/style1.css
@@ -4,8 +4,21 @@
   padding: 0;
   box-sizing: border-box;
 }
+.hero-content {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* keeps it centered */
+  gap: 15px;
+  margin-bottom: 15px;
+}
 
-
+.hero-img {
+  width: 120px; /* you can increase if you want */
+  height: 120px;
+  border-radius: 50%;
+  border: 4px solid #0077cc;
+  object-fit: cover;
+}
 
 body {
   font-family: "Poppins", sans-serif;
